Progreso faltan datos.

--- a/tecolotl-web/src/main/webapp/alumno/activities.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/activities.xhtml
@@ -104,7 +104,7 @@
                                     </h:panelGroup>
                                 </div>
                                 <div class="uk-card-body">
-                                    Please, watch the video till the end.
+                                    Please watch the full video!
                                 </div>
                                 <div  class="uk-card-footer">
                                     <h:form>
