--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -137,19 +137,19 @@
                                 <h:panelGroup  styleClass="fondo-comic5 uk-child-width-1-3@m uk-grid" pt:uk-grid="">
                                     <div>
                                         <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0"  >
-                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/who.svg" alt="moustrou naranja" pt:uk-tooltip="title: #{alumno['grammar']}; pos: right"/>
+                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/who.svg" alt="moustrou naranja" pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[0].tarea}; pos: right"/>
                                             <div class="uk-width-1-1@m paddind-barra " ><progress class="uk-progress color1" value="#{tareasProgresoControlador.tareaResuetasModeloLista[0].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[0].total}"/></div>
                                         </div>
                                     </div>
                                     <div>
                                         <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0" >
-                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/whom.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['listening']}; pos: right "  />
+                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/whom.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[1].tarea}; pos: right "  />
                                             <div class="uk-width-1-1@m paddind-barra "><progress class="uk-progress color2" value="#{tareasProgresoControlador.tareaResuetasModeloLista[1].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[1].total}"/></div>
                                         </div>
                                     </div>
                                     <div>
                                         <div class="uk-flex uk-flex-center  uk-grid uk-animation-toggle" tabindex="0">
-                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake " library="img" name="mounstro/whose.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['reading']}; pos: right "  />
+                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake " library="img" name="mounstro/whose.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[2].tarea}; pos: right "  />
                                             <div class="uk-width-1-1@m paddind-barra "><progress class="uk-progress color3" value="#{tareasProgresoControlador.tareaResuetasModeloLista[2].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[2].total}"/></div>
                                         </div>
                                     </div>
@@ -157,19 +157,19 @@
                                 <h:panelGroup layout="block" styleClass="uk-grid uk-child-width-1-3@m uk-grid" pt:uk-grid="">
                                     <div class="fondo-comic" style="border: 6px solid white; padding: 20px 0;">
                                         <div class="uk-flex uk-flex-center uk-grid uk-animation-toggle" tabindex="0">
-                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake"  library="img" name="mounstro/3ojos.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['writing']}; pos: right "/>
+                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake"  library="img" name="mounstro/3ojos.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[3].tarea}; pos: right "/>
                                             <div class="uk-width-1-1@m paddind-barra"><progress class="uk-progress color4" value="#{tareasProgresoControlador.tareaResuetasModeloLista[3].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[3].total}"/></div>
                                         </div>
                                     </div>
                                     <div class="fondo-comic4 " style="border: 6px solid white; padding: 20px 0;">
                                         <div class="uk-flex uk-flex-center  uk-grid uk-animation-toggle" tabindex="0" >
-                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/verde.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['mental.map']}; pos: right "/>
+                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/verde.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[4].tarea}; pos: right "/>
                                             <div class="uk-width-1-1@m paddind-barra"><progress class="uk-progress color5" value="#{tareasProgresoControlador.tareaResuetasModeloLista[4].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[4].total}"/></div>
                                         </div>
                                     </div>
                                     <div class="fondo-comic6 " style="border: 6px solid white; padding: 20px 0;">
                                         <div class="uk-flex uk-flex-center  uk-grid uk-animation-toggle" tabindex="0" >
-                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/naranja.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{alumno['mapa-men']}; pos: right "/>
+                                            <h:graphicImage styleClass="img-alumno-dashboard uk-animation-shake" library="img" name="mounstro/naranja.svg" alt="moustrou naranja"  pt:uk-tooltip="title: #{tareasProgresoControlador.tareaResuetasModeloLista[5].tarea}; pos: right "/>
                                             <div class="uk-width-1-1@m paddind-barra"><progress class="uk-progress color5" value="#{tareasProgresoControlador.tareaResuetasModeloLista[5].respuesta}" max="#{tareasProgresoControlador.tareaResuetasModeloLista[5].total}"/></div>
                                         </div>
                                     </div>
