vista de hablar

--- a/tecolotl-web/src/main/webapp/alumno/order-sentences.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/order-sentences.xhtml
@@ -88,6 +88,7 @@
                     <ul class="uk-subnav uk-subnav-pill uk-flex uk-flex-center">
                         <li uk-filter-control=".ordenar" uk-tooltip="Order Words" class="uk-animation-toggle uk-active" tabindex="0"><h:graphicImage library="img" name="mounstro/3ojos.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
                         <li uk-filter-control=".relacion-imagen" uk-tooltip="palabras" class="uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
+                        <li uk-filter-control=".talking" uk-tooltip="palabras" class="uk-animation-toggle" tabindex="0"><h:graphicImage library="img" name="mounstro/verde.svg" width="70" height="70" styleClass="uk-border-circle uk-animation-shake"/></li>
 
                     </ul>
 
@@ -157,7 +158,27 @@
                                     <div class="palabra-imagen" >palabra5</div>
                                 </div>
                             </div>
-
+                        </li>
+                        <li class="talking" >
+                            <h1 class="lescuadron uk-text-center letra-titulo">Habla con tu pareja</h1>
+                            <div class="uk-grid" uk-grid="">
+                                <div class="uk-width-1-2@m uk-position-relative talking-contenedor">
+                                    <div class="rombo color-uno"></div>
+                                    <span class="rombo-palabra">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet autem blanditiis mollitia officia omnis perferendis quibusdam quisquam sint sunt.</span>
+                                </div>
+                                <div class="uk-width-1-2@m uk-position-relative talking-contenedor">
+                                    <div class="rombo color-dos"></div>
+                                    <span class="rombo-palabra">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet autem blanditiis mollitia officia omnis perferendis quibusdam quisquam sint sunt.</span>
+                                </div>
+                                <div class="uk-width-1-2@m uk-position-relative talking-contenedor">
+                                    <div class="rombo color-tres"></div>
+                                    <span class="rombo-palabra">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet autem blanditiis mollitia officia omnis perferendis quibusdam quisquam sint sunt.</span>
+                                </div>
+                                <div class="uk-width-1-2@m uk-position-relative talking-contenedor">
+                                    <div class="rombo color-cuatro"></div>
+                                    <span class="rombo-palabra">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam amet autem blanditiis mollitia officia omnis perferendis quibusdam quisquam sint sunt.</span>
+                                </div>
+                            </div>
                         </li>
 
                     </ul>
